@@ -36,7 +36,7 @@
  synthetic_rubber_refinery_inactive:0 "Rubber Refinery (inactive)"
  synthetic_rubber_refinery_inactive_plural:0 "Rubber Refineries (inactive)"
  synthetic_rubber_refinery_inactive_desc:0 "This Rubber Refinerie is inactive because of raw resource shortages. Can be reactivated by decision if enough raw resources are provided."
- synthetic_refinery_desc:0 "This building §Y(consumes §! §R100 Coal§! §Y)§! provides the state with "
+ synthetic_refinery_desc:0 "This building §Y(consumes §! §R10 Coal§! §Y)§! provides the state with "
  synthetic_refinery_inactive:0 "Synthetic Refinery (inactive)"
  synthetic_refinery_inactive_plural:0 "Synthetic Refineries (inactive)"
  synthetic_refinery_inactive_desc:0 "This Synthetic Refinerie is inactive because of raw resource shortages. Can be reactivated by decision if enough raw resources are provided."
