@@ -15,7 +15,7 @@
  arms_factory_desc:0 "This building provides the state with industry for production of new military equipment. Can be converted to civilian industry if needed. §GCost is reduced by 200 for every existing military factory in the state §! §Y(consumes §!§R1 Coal!§! §Y)§!"
  steel_refinery:0 "Steel Mill"
  steel_refinery_plural:0 "Steel Mills"
- steel_refinery_desc:0 "A Steel mill or Steelworks is an industrial plant for the manufacture of Steel §Y(consumes §! §R50 Coal§! §Y,§! §R1 Rare Material§! §Yand §!§R60 Iron§! §Y)§! providing the state with "
+ steel_refinery_desc:0 "A Steel mill or Steelworks is an industrial plant for the manufacture of Steel §Y(consumes §! §R50 Coal§! §Y,§! §R1 Rare Material§! §Yand §!§R40 Iron§! §Y)§! providing the state with "
  steel_refinery_inactive:0 "Steel Mill(inactive)"
  steel_refinery_inactive_plural:0 "Steel Mills(inactive)"
  steel_refinery_inactive_desc:0 "This Steel mill is inactive because of raw resource shortages. Can be reactivated by decision if enough raw resources are provided."
@@ -23,20 +23,20 @@
  small_Steel_refinery_desc:0 "A small Steel mill or Steelworks is an industrial plant for the manufacture of Steel of somewhat smaller dimensions providing the state with"
  aluminium_refinery:0 "Aluminium Smelter"
  aluminium_refinery_plural:0 "Aluminium Smelters"
- aluminium_refinery_desc:0 "Aluminium smelting is the process of extracting aluminium from its oxide, alumina, generally by the Hall-Héroult process §Y(consumes §!§R25 Coal§! §Y and §!§R100 Bauxite§! §Y)§! providing the state with "
+ aluminium_refinery_desc:0 "Aluminium smelting is the process of extracting aluminium from its oxide, alumina, generally by the Hall-Héroult process §Y(consumes §!§R25 Coal§! §Y and §!§R25 Bauxite§! §Y)§! providing the state with "
  aluminium_refinery_inactive:0 "Aluminium Smelters(inactive)"
  aluminium_refinery_inactive_plural:0 "Aluminium Smelters(inactive)"
  aluminium_refinery_inactive_desc:0 "This aluminium Smelters is inactive because of raw resource shortages. Can be reactivated by decision if enough raw resources are provided."
  hydro_aluminium_refinery:0 "Hydro Powered Aluminium Smelter"
  hydro_aluminium_refinery_plural:0 "Hydro Powered Aluminium Smelters"
- hydro_aluminium_refinery_desc:0 "Aluminium smelting made cheaper through an hydro powered facility (consumes §R100 Bauxite§!) providing the state with "
+ hydro_aluminium_refinery_desc:0 "Aluminium smelting made cheaper through an hydro powered facility (consumes §R25 Bauxite§!) providing the state with 50 aluminium"
  synthetic_rubber_refinery:0 "Rubber Refinery"
  synthetic_rubber_refinery_plural:0 "Rubber Refineries"
  synthetic_rubber_refinery_desc:0 "Artificial rubber synthesized from Coal byproducts §Y(consumes §! §R100 Coal§! §Y and §! §R1 Oil§! §Y)§! providing the state with "
  synthetic_rubber_refinery_inactive:0 "Rubber Refinery (inactive)"
  synthetic_rubber_refinery_inactive_plural:0 "Rubber Refineries (inactive)"
  synthetic_rubber_refinery_inactive_desc:0 "This Rubber Refinerie is inactive because of raw resource shortages. Can be reactivated by decision if enough raw resources are provided."
- synthetic_refinery_desc:0 "This building §Y(consumes §! §R100 Coal§! §Y)§! provides the state with "
+ synthetic_refinery_desc:0 "This building §Y(consumes §! §R10 Coal§! §Y)§! provides the state with "
  synthetic_refinery_inactive:0 "Synthetic Refinery (inactive)"
  synthetic_refinery_inactive_plural:0 "Synthetic Refineries (inactive)"
  synthetic_refinery_inactive_desc:0 "This Synthetic Refinerie is inactive because of raw resource shortages. Can be reactivated by decision if enough raw resources are provided."
