@@ -1001,3 +1001,7 @@
  purchase_czech_light_tank_equipment:0 "Purchase 20 Czechoslovakian Light Tanks"
  Fall_Weiss:0 "Fall Weiss"
  Declare_War_on_Poland:0 "Invade Poland"
+ develop_ems_oil_fields:0 "Develop Hamburg area oil fields"
+ develop_ems_oil_fields_desc:0 "Geologist discovered oil in the Hamburgian countryside that could be interresting to exploit it, although they don't expect extraction to keep up for too long..."
+ expand_matzen_oil_fields:0 "Expand Matzen Oil Fields"
+ expand_matzen_oil_fields_2:0 "Expand Matzen Oil Fields"
