@@ -1,7 +1,19 @@
 Changelog
 0.8.7
 
+Balance 
+
 - Rebalance fuel produced and coal needed by synth fuel reffineries
+
+Database 
+
+- increase starting oil available in Romania 
+- set more accurate values for starting oil in Germany 
+- set more accurate starting reffineries level in Germany 
+
+Features 
+
+- Added decisions to increase oil extraction in Austria
 
 0.8.6
 
